2010-08-21 Change Axis.set_view_interval() so that when updating an
           existing interval, it respects the orientation of that
           interval, and can enlarge but not reduce the interval.
           This fixes a bug in which Axis.set_ticks would
           change the view limits of an inverted axis. Whether
           set_ticks should be affecting the viewLim at all remains
           an open question. - EF

2010-08-16 Handle NaN's correctly in path analysis routines.  Fixes a
           bug where the best location for a legend was not calculated
           correctly when the line contains NaNs. - MGD

2010-08-14 Fix bug in patch alpha handling, and in bar color kwarg - EF

2010-08-12 Removed all traces of numerix module after 17 months of
           deprecation warnings. - EF

2010-08-05 Added keyword arguments 'thetaunits' and 'runits' for polar
           plots.  Fixed PolarAxes so that when it set default
           Formatters, it marked them as such.  Fixed semilogx and
           semilogy to no longer blindly reset the ticker information
           on the non-log axis.  Axes.arrow can now accept unitized
           data. - JRE

2010-08-03 Add support for MPLSETUPCFG variable for custom setup.cfg
           filename.  Used by sage buildbot to build an mpl w/ no gui
           support - JDH

2010-08-01 Create directory specified by MPLCONFIGDIR if it does
           not exist. - ADS

2010-07-20 Return Qt4's default cursor when leaving the canvas - DSD

2010-07-06 Tagging for mpl 1.0 at r8502


2010-07-05 Added Ben Root's patch to put 3D plots in arbitrary axes,
           allowing you to mix 3d and 2d in different axes/subplots or
           to have multiple 3D plots in one figure.  See
           examples/mplot3d/subplot3d_demo.py - JDH

2010-07-05 Preferred kwarg names in set_xlim are now 'left' and
           'right'; in set_ylim, 'bottom' and 'top'; original
           kwargs are still accepted without complaint. - EF
